# comp_bags

./: app.py  pyproject.toml
assets/: shop_data.db  shopped_data.db  style.css  styles.css
setup/: bags.sql  init_db.py
templates/: account.html  base.html  home.html  index.html  login.html  shop.html
